--- a/package.json
+++ b/package.json
@@ -28,15 +28,22 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "4.7.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-stylefmt": "^1.1.0",
+    "gulp-stylelint": "^5.0.0",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
-    "popper.js": "^1.11.1"
+    "popper.js": "^1.11.1",
+    "stylelint-config-sass-guidelines": "^3.1.0"
   },
   "devDependencies": {
     "browser-sync": "2.18.13",
     "gulp": "^3.9.1",
     "gulp-clean-css": "3.7.0",
     "gulp-header": "1.8.9",
+    "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "3.0.0"
