--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "3.7.0",
     "gulp-header": "1.8.9",
+    "gulp-install": "^1.1.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
